apps/external/pve/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pve-ing-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`pve.dcunha.io`)
    kind: Rule
    services:
    - name: pve-n01-svc
      port: 8006
    - name: pve-n02-svc
      port: 8006
    - name: pve-n03-svc
      port: 8006
    middlewares:
    - name: default-headers
  tls:
    secretName: dcunha-io-tls
